finalize docs theme for now

--- a/docs/themes/docs/layouts/partials/menu.html
+++ b/docs/themes/docs/layouts/partials/menu.html
@@ -3,8 +3,8 @@
 
 {{- with index site.Menus $menuID }}
   <nav>
-    <div class="topnav" id="myTopnav">
-        Test
+    <div class="topnav">
+      {{ $page.Site.Title }}
     </div>
   </nav>
 {{- end }}
