--- a/docs/themes/docs/assets/css/main.css
+++ b/docs/themes/docs/assets/css/main.css
@@ -1,5 +1,9 @@
 :root {
-  --content-max-width: 800px;
+  --content-max-width: 1536px;
+  --sidebar-width: 210px;
+
+  --transition-time: 0.5s;
+
   --color-typst: #219dac;
   --color-bg: #222;
   --color-active-bg: rgba(150, 150, 150, 0.3);
@@ -9,18 +13,14 @@
 /* Fixed sidenav, full height */
 .sidenav {
   height: 100%;
-  width: 200px;
-  position: fixed;
+  width: var(--sidebar-width);
   z-index: 1;
-  top: 0;
-  left: 0;
   overflow-x: hidden;
   padding-top: 20px;
 }
 
 /* Style the sidenav links and the dropdown button */
 .sidenav a, .dropdown-btn {
-  padding: 6px 8px 6px 16px;
   text-decoration: none;
   font-size: 20px;
   color: #818181;
@@ -32,35 +32,51 @@
   outline: none;
 }
 
-/* On mouse-over */
-.sidenav a:hover, .dropdown-btn:hover {
-  color: #f1f1f1;
+.sidenav .dropdown-btn {
+  border-radius: 20px;
+}
+
+.sidenav .dropdown-btn.expanded .arrow-menu {
+  transform: rotate(90deg);
+}
+
+.sidenav .entry-formatter {
+  margin: 6px 8px 6px 16px;
+  grid-template-columns: auto 1em;
+  display: grid;
+}
+
+.arrow-menu {
+  height: 20px;
+  transition-property: transform;
+  transition-duration: var(--dropdown-transition-time);
+}
+
+.dropdown-container {
+  display: block;
+  padding-left: 8px;
+  transition-duration: var(--transition-time);
+  /* TRANSITIONS ARE NOT WORKING WITH RESIZING OF THE BOX */
+  overflow: visible hidden;
+
+  max-height: none;
+  pointer-events: auto;
+  user-select: auto;
+  opacity: 1;
+}
+
+.dropdown-container.hidden {
+  max-height: 0px;
+  pointer-events: none;
+  user-select: none;
+  opacity: 0;
 }
 
 /* Main content */
 .main {
   margin-left: 200px; /* Same as the width of the sidenav */
   font-size: 20px; /* Increased text to enable scrolling */
-  padding: 0px 10px;
-}
-
-/* Add an active class to the active dropdown button */
-.active {
-  background-color: var(--color-active-bg);
-  color: var(--color-active-text);
-  border-radius: 20px;
-}
-
-/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
-.dropdown-container {
-  display: none;
-  padding-left: 8px;
-}
-
-/* Optional: Style the caret down icon */
-.fa-caret-down {
-  float: right;
-  padding-right: 8px;
+  padding: 0px 32px;
 }
 
 /* Some media queries for responsiveness */
@@ -77,13 +93,23 @@ body {
   margin: 0px;
 }
 
+.main-grid {
+  padding: 32px;
+  display: grid;
+  grid-template-columns: minmax(auto, var(--sidebar-width)) minmax(auto, 880px) minmax(auto, 144px);
+  align-items: first_baseline;
+  gap: 36px;
+  justify-content: start;
+}
+
 code {
   font-family: 'Cascadia Code',Courier New,Courier,monospace;
 }
 
 .content {
-  max-width: var(--content-max-width);
-  margin: auto;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 header {
@@ -93,7 +119,10 @@ header {
 }
 
 .topnav {
-  color: #fff;
+  font-size: 24px;
+  font-weight: bold;
+  color: var(--color-typst);
+  padding: 24px 32px;
 }
 
 footer {
