--- a/docs/themes/docs/layouts/_default/baseof.html
+++ b/docs/themes/docs/layouts/_default/baseof.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="{{ or site.Language.LanguageCode site.Language.Lang }}" dir="{{ or site.Language.LanguageDirection `ltr` }}">
 <head>
   {{ partial "head.html" . }}
@@ -9,14 +9,16 @@
       {{ partial "header.html" . }}
     </div>
   </header>
-  <main>
+  <div class="main-grid">
     <div class="sidebar">
       {{ partial "sidebar.html" . }}
     </div>
     <div class="content">
-      {{ block "main" . }}{{ end }}
+      <main>
+        {{ block "main" . }}{{ end }}
+      </main>
     </div>
-  </main>
+  </div>
   <footer>
     <div class="content">
       {{ partial "footer.html" . }}
