--- a/docs/themes/docs/layouts/partials/sidebar.html
+++ b/docs/themes/docs/layouts/partials/sidebar.html
@@ -3,7 +3,6 @@
 
 {{- with index site.Menus $menuID }}
 <div class="sidenav">
-  <a href="#contact">Search</a>
   {{- partial "inline/sidebar/walk.html" (dict "page" $page "menuEntries" .) }}
 </div>
 {{ end }}
@@ -17,52 +16,47 @@ var i;
 
 for (i = 0; i < dropdown.length; i++) {
     dropdown[i].addEventListener("click", function() {
-        this.classList.toggle("active");
-        var dropdownContent = this.nextElementSibling;
-        if (dropdownContent.style.display === "block") {
+      this.classList.toggle("expanded");
+      this.attributes["expanded"] = true;
+      var dropdownContent = this.nextElementSibling;
+      dropdownContent.classList.toggle("hidden");
+      /* if (dropdownContent.style.display === "block") {
         dropdownContent.style.display = "none";
-        } else {
+      } else {
         dropdownContent.style.display = "block";
-        }
+      }*/
     });
 }
 
 var j;
 for (j = 0; j < dropdown.length; j++) {
-    console.log(dropdown[j]);
-    console.log(dropdown[j].childNodes);
-    if (dropdown[j].ariaCurrent!=null) {
-        console.log("dropdown button is activated");
-        dropdownContent = this.nextElementSibling;
-        dropdownContent.style.display = "block";
-    }
+  dd = dropdown[j]
+  if (dd.classList.contains("expanded")) {
+      var dropdownContent = dd.nextElementSibling;
+      dropdownContent.style.display = "block";
+      dropdownContent.classList.toggle("hidden");
+  }
 }
 </script>
 
 {{- define "partials/inline/sidebar/walk.html" }}
   {{- $page := .page }}
   {{- range .menuEntries }}
-    {{- $attrs := dict "href" .URL }}
+    {{- $attrs := dict "href" .URL}}
+    {{- $attrs_button := dict "class" "dropdown-btn" }}
+    {{- $attrs_image := dict "class" "arrow-menu" }}
     {{- if $page.IsMenuCurrent .Menu . }}
       {{- $attrs = merge $attrs (dict "class" "active" "aria-current" "page") }}
+      {{- $attrs_button = merge $attrs_button (dict "class" "dropdown-btn ancestor expanded") }}
+      {{- $attrs_image = merge $attrs_image (dict "class" "arrow-menu expanded")}}
     {{- else if $page.HasMenuCurrent .Menu .}}
       {{- $attrs = merge $attrs (dict "class" "ancestor" "aria-current" "true") }}
+      {{- $attrs_button = merge $attrs_button (dict "class" "dropdown-btn expanded") }}
+      {{- $attrs_image = merge $attrs_image (dict "class" "arrow-menu expanded")}}
     {{- end }}
-    {{- $identifier := or (T .Identifier) .Name | safeHTML }}
-    {{- with .Children }}
-        <button class="dropdown-btn"
-        {{- range $k, $v := $attrs }}
-                {{- with $v }}
-                    {{- printf " %s=%q" $k $v | safeHTMLAttr }}
-                {{- end }}
-            {{- end -}}>
-            {{ $identifier }}
-            <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-container">
-          {{- partial "inline/sidebar/walk.html" (dict "page" $page "menuEntries" .) }}
-        </div>
-    {{- else }}
+
+    
+    <div class="entry-formatter">
     <a
       {{- range $k, $v := $attrs }}
         {{- with $v }}
@@ -70,6 +64,24 @@ for (j = 0; j < dropdown.length; j++) {
         {{- end }}
       {{- end -}}
     >{{ or (T .Identifier) .Name | safeHTML }}</a>
+    {{- with .Children }}
+        <button
+        {{- range $k, $v := $attrs_button }}
+          {{- with $v }}
+              {{- printf " %s=%q" $k $v | safeHTMLAttr }}
+          {{- end }}
+          {{- end -}}><img
+            {{- range $k, $v := $attrs_image }}
+              {{- with $v }}
+                {{- printf " %s=%q" $k $v | safeHTMLAttr }}
+              {{- end }}
+            {{- end -}}
+          src="/arrow-menu.svg">
+        </button>
+        <div class="dropdown-container hidden">
+          {{- partial "inline/sidebar/walk.html" (dict "page" $page "menuEntries" .) }}
+        </div>
     {{- end }}
+    </div>
   {{- end }}
 {{- end }}
