make header reference /home
- also for later plan to include the menu when it is hidden (ie. mobile
  navigation)

--- a/docs/themes/docs/layouts/partials/menu.html
+++ b/docs/themes/docs/layouts/partials/menu.html
@@ -3,8 +3,11 @@
 
 {{- with index site.Menus $menuID }}
   <nav>
+    <div class="top-menu">
+      <!-- TODO {{- partial "inline/sidebar/walk.html" (dict "page" $page "menuEntries" .) }}-->
+    </div>
     <div class="topnav">
-      {{ $page.Site.Title }}
+      <a href="{{ $page.Site.BaseURL }}">{{ $page.Site.Title }}</a>
     </div>
   </nav>
 {{- end }}
