--- a/docs/themes/docs/layouts/partials/menu.html
+++ b/docs/themes/docs/layouts/partials/menu.html
@@ -8,6 +8,7 @@
     </div>
     <div class="topnav">
       <a href="{{ $page.Site.BaseURL }}">{{ $page.Site.Title }}</a>
+      <a class="header-author" href="mailto:{{ $page.Site.Params.author_mail }}?subject={{ $page.Site.Title }}">{{ $page.Site.Params.author}}</a>
     </div>
   </nav>
 {{- end }}
