make highlight block for [function]

--- a/docs/themes/docs/assets/css/main.css
+++ b/docs/themes/docs/assets/css/main.css
@@ -282,6 +282,10 @@ td {
   background: #d1ffe2;
 }
 
+.code-type-function {
+  background: #eff0f3;
+}
+
 .code-value-false {
   color: #d73a49;
 }
