deploy: 07e66c6aa51a73583d4192f2db8277a0eca6b07a

--- a/documentation/layouts/index.html
+++ b/documentation/layouts/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang=en-us dir=ltr><head><meta charset=utf-8><meta name=viewport content="width=device-width,minimum-scale=1,initial-scale=1"><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Hanken+Grotesk"><link rel=stylesheet href=https://fonts.cdnfonts.com/css/cascadia-code><title>| typst-posters</title><link rel=stylesheet href=/typst-posters/css/main.min.d94d96bbd876279cc1f34cf6b1932fa3ca52e600b96800f79e23b81b87017d3e.css integrity="sha256-2U2Wu9h2J5zB80z2sZMvo8pS5gC5aAD3niO4G4cBfT4=" crossorigin=anonymous><script src=/typst-posters/js/main.23cd0c7d837263b9eaeb96ee2d9ccfa2969daa3fa00fa1c1fe8701a9b87251a1.js integrity="sha256-I80MfYNyY7nq65buLZzPopadqj+gD6HB/ocBqbhyUaE=" crossorigin=anonymous></script></head><body><div class=page-container><header><div class=content><nav><div class=top-menu></div><div class=topnav><a href=https://jonaspleyer.github.io/typst-posters/>typst-posters</a>
+<!doctype html><html lang=en-us dir=ltr><head><meta charset=utf-8><meta name=viewport content="width=device-width,minimum-scale=1,initial-scale=1"><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Hanken+Grotesk"><link rel=stylesheet href=https://fonts.cdnfonts.com/css/cascadia-code><title>| typst-posters</title><link rel=stylesheet href=/typst-posters/css/main.min.3d7db6ba5f080415f690af21277ddf6d9a3df56326ec03a3344fe171b44fc07f.css integrity="sha256-PX22ul8IBBX2kK8hJ33fbZo99WMm7AOjNE/hcbRPwH8=" crossorigin=anonymous><script src=/typst-posters/js/main.23cd0c7d837263b9eaeb96ee2d9ccfa2969daa3fa00fa1c1fe8701a9b87251a1.js integrity="sha256-I80MfYNyY7nq65buLZzPopadqj+gD6HB/ocBqbhyUaE=" crossorigin=anonymous></script></head><body><div class=page-container><header><div class=content><nav><div class=top-menu></div><div class=topnav><a href=https://jonaspleyer.github.io/typst-posters/>typst-posters</a>
 <a class=header-author href="mailto:jonas.sci@pleyer.org?subject=typst-posters">Jonas Pleyer</a></div></nav></div></header><div class=main-grid><div class=sidebar-left><div class=sidenav><div class=entry-formatter><a href=/typst-posters/>Home</a></div><div class=entry-formatter><a aria-current=true class=ancestor href=/typst-posters/documentation/>Documentation</a>
 <button class="dropdown-btn expanded"><img class="arrow-menu expanded" src=/typst-posters/arrow-menu.svg></button><div class=dropdown-container><div class=entry-formatter><a href=/typst-posters/documentation/boxes/>Boxes</a></div><div class=entry-formatter><a href=/typst-posters/documentation/themes/>Themes</a></div><div class=entry-formatter><a aria-current=page class=active href=/typst-posters/documentation/layouts/>Layouts</a></div></div></div><div class=entry-formatter><a href=/typst-posters/showcase/>Showcase</a></div><div class=entry-formatter><a href=/typst-posters/tips_and_tricks/>Tips and Tricks</a></div></div><script>var i,dropdown=document.getElementsByClassName("dropdown-btn");for(i=0;i<dropdown.length;i++)dropdown[i].addEventListener("click",function(){this.classList.toggle("expanded"),this.attributes.expanded=!0;var e=this.nextElementSibling;e.classList.toggle("hidden")})</script></div><div class=content><main><h1 id=layouts>Layouts</h1><p>Layouts modify mostly shapes and spacings between boxes.
 Similarly to <a href=/documentation/themes>themes</a>, their purpose is cosmetic.
@@ -12,37 +12,53 @@ A layout, just like a theme, is a dictionary.</p><pre tabindex=0><code class=lan
     &#34;keywords_size&#34;: <a href=https://typst.app/docs/reference/foundations/length/ class="code-type-length code-type-block">length</a>,
 )
 </code></pre><p>All default values assume an <code>a0</code> layout.
-You can easily change this by using the <code>set_new_layout</code> function below.</p><table><thead><tr><th>Argument</th><th>Type</th><th>Default Value</th><th>Description</th></tr></thead><tbody><tr><td><code>spacing</code></td><td><a href=https://typst.app/docs/reference/foundations/length/ class="code-type-length code-type-block">length</a> <a href=https://typst.app/docs/reference/layout/relative/ class="code-type-relative code-type-block">relative</a></td><td><code>1.2em</code></td><td>Spacing between boxes when stretching box.</td></tr><tr><td><code>body_size</code></td><td><a href=https://typst.app/docs/reference/foundations/length/ class="code-type-length code-type-block">length</a></td><td><code>33pt</code></td><td>Size of the body.</td></tr><tr><td><code>heading_size</code></td><td><a href=https://typst.app/docs/reference/foundations/length/ class="code-type-length code-type-block">length</a></td><td><code>50pt</code></td><td>Size of the heading.</td></tr><tr><td><code>title_size</code></td><td><a href=https://typst.app/docs/reference/foundations/length/ class="code-type-length code-type-block">length</a></td><td><code>75pt</code></td><td>Size of the title.</td></tr><tr><td><code>subtitle_size</code></td><td><a href=https://typst.app/docs/reference/foundations/length/ class="code-type-length code-type-block">length</a></td><td><code>60pt</code></td><td>Size of the subtitle.</td></tr><tr><td><code>authors_size</code></td><td><a href=https://typst.app/docs/reference/foundations/length/ class="code-type-length code-type-block">length</a></td><td><code>50pt</code></td><td>Size of the authors.</td></tr><tr><td><code>keywords_size</code></td><td><a href=https://typst.app/docs/reference/foundations/length/ class="code-type-length code-type-block">length</a></td><td><code>40pt</code></td><td>Size of the keywords.</td></tr></tbody></table><h2 id=updating-a-layout>Updating a Layout</h2><pre tabindex=0><code class=language-typst data-lang=typst>update_layout(
+You can easily change this by using the <code>set_layout</code> function below.</p><table><thead><tr><th>Argument</th><th>Type</th><th>Default Value</th><th>Description</th></tr></thead><tbody><tr><td><code>spacing</code></td><td><a href=https://typst.app/docs/reference/foundations/length/ class="code-type-length code-type-block">length</a> <a href=https://typst.app/docs/reference/layout/relative/ class="code-type-relative code-type-block">relative</a></td><td><code>1.2em</code></td><td>Spacing between boxes when stretching box.</td></tr><tr><td><code>body_size</code></td><td><a href=https://typst.app/docs/reference/foundations/length/ class="code-type-length code-type-block">length</a></td><td><code>33pt</code></td><td>Size of the body.</td></tr><tr><td><code>heading_size</code></td><td><a href=https://typst.app/docs/reference/foundations/length/ class="code-type-length code-type-block">length</a></td><td><code>50pt</code></td><td>Size of the heading.</td></tr><tr><td><code>title_size</code></td><td><a href=https://typst.app/docs/reference/foundations/length/ class="code-type-length code-type-block">length</a></td><td><code>75pt</code></td><td>Size of the title.</td></tr><tr><td><code>subtitle_size</code></td><td><a href=https://typst.app/docs/reference/foundations/length/ class="code-type-length code-type-block">length</a></td><td><code>60pt</code></td><td>Size of the subtitle.</td></tr><tr><td><code>authors_size</code></td><td><a href=https://typst.app/docs/reference/foundations/length/ class="code-type-length code-type-block">length</a></td><td><code>50pt</code></td><td>Size of the authors.</td></tr><tr><td><code>keywords_size</code></td><td><a href=https://typst.app/docs/reference/foundations/length/ class="code-type-length code-type-block">length</a></td><td><code>40pt</code></td><td>Size of the keywords.</td></tr></tbody></table><h2 id=updating-a-layout>Updating a Layout</h2><pre tabindex=0><code class=language-typst data-lang=typst>update_layout(
     ..args
 )
-</code></pre><p>All arguments coincide with the values of the ones of <code>layout</code> shown above.</p><h2 id=setting-a-new-layout>Setting a new Layout</h2><pre tabindex=0><code class=language-typst data-lang=typst>set_new_layout(
+</code></pre><p>All arguments coincide with the values of the ones of <code>layout</code> shown above.</p><h2 id=setting-a-new-layout>Setting a new Layout</h2><pre tabindex=0><code class=language-typst data-lang=typst>set_layout(
     layout: <a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a>,
 )
 </code></pre><h2 id=example-layouts>Example Layouts</h2><h3 id=default>Default</h3><pre tabindex=0><code class=language-typst data-lang=typst>#let _default_layout = (
     &#34;spacing&#34;: 1.2em,
 )
 </code></pre><h3 id=a0>A0</h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a0 = _default_layout + (
-    &#34;body_size&#34;: 33pt,
-    &#34;heading_size&#34;: 50pt,
-    &#34;title_size&#34;: 75pt,
-    &#34;subtitle_size&#34;: 60pt,
-    &#34;authors_size&#34;: 50pt,
-    &#34;keywords_size&#34;: 40pt,
+    &#34;body_size&#34;:        33pt,
+    &#34;heading_size&#34;:     50pt,
+    &#34;title_size&#34;:       75pt,
+    &#34;subtitle_size&#34;:    60pt,
+    &#34;authors_size&#34;:     50pt,
+    &#34;keywords_size&#34;:    40pt,
 )
 </code></pre><h3 id=a1>A1</h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a1 = _default_layout + (
-    &#34;body_size&#34;: 30pt,
-    &#34;heading_size&#34;: 45pt,
-    &#34;title_size&#34;: 70pt,
-    &#34;subtitle_size&#34;: 60pt,
-    &#34;authors_size&#34;: 45pt,
-    &#34;keywords_size&#34;: 36pt,
+    &#34;body_size&#34;:        27pt,
+    &#34;heading_size&#34;:     41pt,
+    &#34;title_size&#34;:       61pt,
+    &#34;subtitle_size&#34;:    49pt,
+    &#34;authors_size&#34;:     41pt,
+    &#34;keywords_size&#34;:    33pt,
 )
-</code></pre><h3 id=a2>A2</h3><pre tabindex=0><code class=language-typst data-lang=typst></code></pre><h3 id=a3>A3</h3><h3 id=a4>A4</h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a4 = _default_layout + (
-    &#34;body_size&#34;: 8pt,
-    &#34;heading_size&#34;: 12pt,
-    &#34;title_size&#34;: 18pt,
-    &#34;subtitle_size&#34;: 15pt,
-    &#34;authors_size&#34;: 12pt,
-    &#34;keywords_size&#34;: 10pt,
+</code></pre><h3 id=a2>A2</h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a2 = _default_layout + (
+    &#34;body_size&#34;:        20pt,
+    &#34;heading_size&#34;:     31pt,
+    &#34;title_size&#34;:       47pt,
+    &#34;subtitle_size&#34;:    38pt,
+    &#34;authors_size&#34;:     31pt,
+    &#34;keywords_size&#34;:    25pt,
 )
-</code></pre><h3 id=a5>A5</h3></main></div><div class=sidebar-right></div></div><footer><div class=content><p>Copyright 2023. All rights reserved.</p></div></footer></div></body></html>
+</code></pre><h3 id=a3>A3</h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a3 = _default_layout + (
+    &#34;body_size&#34;:        14pt,
+    &#34;heading_size&#34;:     22pt,
+    &#34;title_size&#34;:       32pt,
+    &#34;subtitle_size&#34;:    26pt,
+    &#34;authors_size&#34;:     22pt,
+    &#34;keywords_size&#34;:    18pt,
+)
+</code></pre><h3 id=a4>A4</h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a4 = _default_layout + (
+    &#34;body_size&#34;:        8pt,
+    &#34;heading_size&#34;:     12pt,
+    &#34;title_size&#34;:       18pt,
+    &#34;subtitle_size&#34;:    15pt,
+    &#34;authors_size&#34;:     12pt,
+    &#34;keywords_size&#34;:    10pt,
+)
+</code></pre></main></div><div class=sidebar-right></div></div><footer><div class=content><p>Copyright 2023. All rights reserved.</p></div></footer></div></body></html>
