deploy: d760c023b1e85aebc97880aa4551eed43fa84852

--- a/documentation/layouts/index.html
+++ b/documentation/layouts/index.html
@@ -22,6 +22,8 @@ You can easily change this by using the <code>set_layout</code> function below.<
     &#34;spacing&#34;: 1.2em,
 )
 </code></pre><h3 id=a0>A0</h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a0 = _default_layout + (
+    &#34;paper&#34;:            &#34;a0&#34;,
+    &#34;size&#34;:             (841mm, 1188mm),
     &#34;body_size&#34;:        33pt,
     &#34;heading_size&#34;:     50pt,
     &#34;title_size&#34;:       75pt,
@@ -30,6 +32,8 @@ You can easily change this by using the <code>set_layout</code> function below.<
     &#34;keywords_size&#34;:    40pt,
 )
 </code></pre><h3 id=a1>A1</h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a1 = _default_layout + (
+    &#34;paper&#34;:            &#34;a1&#34;,
+    &#34;size&#34;:             (594mm, 841mm),
     &#34;body_size&#34;:        27pt,
     &#34;heading_size&#34;:     41pt,
     &#34;title_size&#34;:       61pt,
@@ -38,6 +42,8 @@ You can easily change this by using the <code>set_layout</code> function below.<
     &#34;keywords_size&#34;:    33pt,
 )
 </code></pre><h3 id=a2>A2</h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a2 = _default_layout + (
+    &#34;paper&#34;:            &#34;a2&#34;,
+    &#34;size&#34;:             (420mm, 594mm),
     &#34;body_size&#34;:        20pt,
     &#34;heading_size&#34;:     31pt,
     &#34;title_size&#34;:       47pt,
@@ -46,6 +52,8 @@ You can easily change this by using the <code>set_layout</code> function below.<
     &#34;keywords_size&#34;:    25pt,
 )
 </code></pre><h3 id=a3>A3</h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a3 = _default_layout + (
+    &#34;paper&#34;:            &#34;a3&#34;,
+    &#34;size&#34;:             (297mm, 420mm),
     &#34;body_size&#34;:        14pt,
     &#34;heading_size&#34;:     22pt,
     &#34;title_size&#34;:       32pt,
@@ -54,6 +62,8 @@ You can easily change this by using the <code>set_layout</code> function below.<
     &#34;keywords_size&#34;:    18pt,
 )
 </code></pre><h3 id=a4>A4</h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a4 = _default_layout + (
+    &#34;paper&#34;:            &#34;a4&#34;,
+    &#34;size&#34;:             (210mm, 297mm),
     &#34;body_size&#34;:        8pt,
     &#34;heading_size&#34;:     12pt,
     &#34;title_size&#34;:       18pt,
@@ -61,4 +71,4 @@ You can easily change this by using the <code>set_layout</code> function below.<
     &#34;authors_size&#34;:     12pt,
     &#34;keywords_size&#34;:    10pt,
 )
-</code></pre></main></div><div class=sidebar-right></div></div><footer><div class=content><p>Copyright 2023. All rights reserved.</p></div></footer></div></body></html>
+</code></pre></main></div><div class=sidebar-right></div></div><footer><div class=content><p>Copyright 2024. All rights reserved.</p></div></footer></div></body></html>
