--- a/docs/assets/normalize.css
+++ b/docs/assets/normalize.css
@@ -1,15 +1,6 @@
 :root {
-  --content-max-width: 1000px;
   --showcase-min-width: 350px;
-  --sidebar-left-width: 210px;
-  --sidebar-right-width: 0px;
-
-  --transition-time: 0.5s;
-
   --color-typst: #219dac;
-  --color-bg: #FFFFFF;
-  --color-active-bg: rgba(150, 150, 150, 0.3);
-  --color-active-text: #111;
 }
 
 a:link {
@@ -20,86 +11,6 @@ a:visited {
   color: var(--color-typst);
 }
 
-/* Fixed sidenav, full height */
-.sidenav {
-  height: 100%;
-  width: var(--sidebar-left-width);
-  z-index: 1;
-  overflow-x: hidden;
-  padding-top: 20px;
-}
-
-/* Style the sidenav links and the dropdown button */
-.sidenav a, .dropdown-btn {
-  text-decoration: none;
-  font-size: 20px;
-  color: #818181;
-  display: block;
-  border: none;
-  background: none;
-  text-align: left;
-  cursor: pointer;
-  outline: none;
-}
-
-.sidenav a.active {
-  color: var(--color-active-text);
-  font-weight: bold;
-}
-
-.sidenav .dropdown-btn {
-  border-radius: 20px;
-}
-
-.sidenav .dropdown-btn.expanded .arrow-menu {
-  transform: rotate(90deg);
-}
-
-.sidenav .entry-formatter {
-  margin: 6px 8px 6px 16px;
-  grid-template-columns: auto 1em;
-  display: grid;
-}
-
-.arrow-menu {
-  height: 20px;
-  transition-property: transform;
-  transition-duration: var(--dropdown-transition-time);
-}
-
-.dropdown-container {
-  display: block;
-  padding-left: 8px;
-  transition-duration: var(--transition-time);
-  /* TRANSITIONS ARE NOT WORKING WITH RESIZING OF THE BOX */
-  overflow: visible hidden;
-
-  max-height: none;
-  pointer-events: auto;
-  user-select: auto;
-  opacity: 1;
-}
-
-.dropdown-container.hidden {
-  max-height: 0px;
-  pointer-events: none;
-  user-select: none;
-  opacity: 0;
-}
-
-/* Main content */
-.main {
-  margin-left: var(--sidebar-left-width); /* Same as the width of the sidenav */
-  font-size: 20px; /* Increased text to enable scrolling */
-  padding: 0px 32px;
-}
-
-/* Some media queries for responsiveness */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-
 body {
   font-family: 'HK Grotesk',Inter,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
   color: #222;
@@ -108,93 +19,20 @@ body {
   margin: 0px;
 }
 
-.main-grid {
-  display: grid;
-  grid-template-columns: minmax(auto, var(--sidebar-left-width)) minmax(auto, var(--content-max-width)) minmax(auto, var(--sidebar-right-width));
-  gap: 36px;
-  justify-content: start;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media screen and (max-width: 1000px) {
-  .sidebar-left {
-    width: 0%;
-    display: none;
-  }
-
-  .main-grid {
-    display: block;
-  }
-
-  .sidebar-right {
-    width: 0%;
-    display: none;
-  }
-}
-
-.page-container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-code {
-  // font-family: 'Cascadia Code',Courier New,Courier,monospace;
-}
-
-.content {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-header {
-  background-color: var(--color-bg);
-  width: 100%;
-  margin: 0px;
-}
-
-.header-author {
-  font-size: 15px;
-  font-weight: normal;
-  color: white;
-  display: float;
-  float: right;
-}
-
-.header-author:link {
-  color: white;
-}
-
-.header-author:visited {
-  color: white;
-}
-
-.topnav {
-  font-size: 24px;
-  font-weight: bold;
-  color: var(--color-typst);
-  padding: 24px 32px;
-}
-
-footer {
-  margin-top: auto;
-  width: 100%;
-  background-color: var(--color-bg);
-  color: white;
-  text-align: center;
-}
-
 a {
   color: #00e;
   text-decoration: none;
 }
 
-pre {
-  padding: 0.5em;
-  color: rgb(226, 226, 226);
-  background: rgb(47, 57, 63);
+.book-page pre {
+  padding:1rem;
+  background:var(--gray-100);
+  border-radius:.25rem;
+  overflow-x:auto
+}
+.book-page pre code {
+  padding:0;
+  background:0 0
 }
 
 .showcase-grid {
@@ -205,7 +43,7 @@ pre {
 }
 
 .showcase-single {
-  background-color: var(--color-active-bg);
+  background-color: var(--fbc-light-gray);
   padding: 1em;
 }
 
