--- a/docs/layouts/showcase/single.html
+++ b/docs/layouts/showcase/single.html
@@ -5,4 +5,7 @@
   <div style="width: 100%; aspect-ratio: 0.7071;">
     <object width="100%" height="100%" data="{{ printf "%s/%s" .RelPermalink .Params.file_path }}"></object>
   </div>
+  {{ $full_path := (path.Join .Page.File.Dir .Params.code_path) }}
+  {{ .Scratch.Set "file" $full_path }}
+  {{ partial "codeFromFile.html" . }}
 {{ end }}
