--- a/documentation/layouts/index.html
+++ b/documentation/layouts/index.html
@@ -1,9 +1,9 @@
 <!doctype html><html lang=en-us dir=ltr><head><meta charset=UTF-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=description content='Layouts # Layouts modify mostly shapes and spacings between boxes. Similarly to themes, their purpose is cosmetic. A layout, just like a theme, is a dictionary.
-layout = ( "spacing": [length] [relative], "body_size": [length], "heading_size": [length], "title_size": [length], "subtitle_size": [length], "authors_size": [length], "keywords_size": [length], ) All default values assume an a0 layout. You can easily change this by using the set_layout function below.
+layout = ( "spacing": [length] [relative], "body-size": [length], "heading-size": [length], "title-size": [length], "subtitle-size": [length], "authors-size": [length], "keywords-size": [length], ) All default values assume an a0 layout. You can easily change this by using the set-layout function below.
 Argument Type Default Value Description spacing [length] [relative] 1.'><meta name=theme-color media="(prefers-color-scheme: light)" content="#ffffff"><meta name=theme-color media="(prefers-color-scheme: dark)" content="#343a40"><meta name=color-scheme content="light dark"><meta property="og:title" content="Layouts"><meta property="og:description" content='Layouts # Layouts modify mostly shapes and spacings between boxes. Similarly to themes, their purpose is cosmetic. A layout, just like a theme, is a dictionary.
-layout = ( "spacing": [length] [relative], "body_size": [length], "heading_size": [length], "title_size": [length], "subtitle_size": [length], "authors_size": [length], "keywords_size": [length], ) All default values assume an a0 layout. You can easily change this by using the set_layout function below.
+layout = ( "spacing": [length] [relative], "body-size": [length], "heading-size": [length], "title-size": [length], "subtitle-size": [length], "authors-size": [length], "keywords-size": [length], ) All default values assume an a0 layout. You can easily change this by using the set-layout function below.
 Argument Type Default Value Description spacing [length] [relative] 1.'><meta property="og:type" content="article"><meta property="og:url" content="https://jonaspleyer.github.io/peace-of-posters/documentation/layouts/"><meta property="article:section" content="documentation"><title>Layouts | peace-of-posters</title>
-<link rel=manifest href=/peace-of-posters/manifest.json><link rel=icon href=/peace-of-posters/favicon.png><link rel=canonical href=https://jonaspleyer.github.io/peace-of-posters/documentation/layouts/><link rel=stylesheet href=/peace-of-posters/book.min.fac77f4c247fad0b9e26b59172691d98e52080385f7f19bdabfd74b8cdf1b2da.css integrity="sha256-+sd/TCR/rQueJrWRcmkdmOUggDhffxm9q/10uM3xsto=" crossorigin=anonymous><script defer src=/peace-of-posters/flexsearch.min.js></script><script defer src=/peace-of-posters/en.search.min.16f8ff7a0be36c4c90b25126f94a181d0e83f997e1618dd302645a017c19fd51.js integrity="sha256-Fvj/egvjbEyQslEm+UoYHQ6D+ZfhYY3TAmRaAXwZ/VE=" crossorigin=anonymous></script></head><body dir=ltr><input type=checkbox class="hidden toggle" id=menu-control>
+<link rel=manifest href=/peace-of-posters/manifest.json><link rel=icon href=/peace-of-posters/favicon.png><link rel=canonical href=https://jonaspleyer.github.io/peace-of-posters/documentation/layouts/><link rel=stylesheet href=/peace-of-posters/book.min.fac77f4c247fad0b9e26b59172691d98e52080385f7f19bdabfd74b8cdf1b2da.css integrity="sha256-+sd/TCR/rQueJrWRcmkdmOUggDhffxm9q/10uM3xsto=" crossorigin=anonymous><script defer src=/peace-of-posters/flexsearch.min.js></script><script defer src=/peace-of-posters/en.search.min.777ef635b2346be53c7c63a26bacaee6c145057b5b1adc42279c3fecfa66d6fd.js integrity="sha256-d372NbI0a+U8fGOia6yu5sFFBXtbGtxCJ5w/7Ppm1v0=" crossorigin=anonymous></script></head><body dir=ltr><input type=checkbox class="hidden toggle" id=menu-control>
 <input type=checkbox class="hidden toggle" id=toc-control><main class="container flex"><aside class=book-menu><div class=book-menu-content><nav><h2 class=book-brand><a class="flex align-center" href=/peace-of-posters/><img src=/peace-of-posters/favicon.svg alt=Logo><span>peace-of-posters</span></a></h2><div class=book-search><input type=text id=book-search-input placeholder=Search aria-label=Search maxlength=64 data-hotkeys=s/><div class="book-search-spinner hidden"></div><ul id=book-search-results></ul></div><ul><li><a href=/peace-of-posters/showcase/>Showcase</a><ul><li><a href=/peace-of-posters/showcase/2023-10-23-bwhpc-symposium/>bwHPC Symposium 2023</a></li></ul></li><li><a href=/peace-of-posters/documentation/>Documentation</a><ul><li><a href=/peace-of-posters/documentation/boxes/>Boxes</a></li><li><a href=/peace-of-posters/documentation/layouts/ class=active>Layouts</a></li><li><a href=/peace-of-posters/documentation/themes/>Themes</a></li><li><a href=/peace-of-posters/documentation/tips_and_tricks/>Tips and Tricks</a></li></ul></li></ul></nav><script>(function(){var e=document.querySelector("aside .book-menu-content");addEventListener("beforeunload",function(){localStorage.setItem("menu.scrollTop",e.scrollTop)}),e.scrollTop=localStorage.getItem("menu.scrollTop")})()</script></div></aside><div class=book-page><header class=book-header><div class="flex align-center justify-between"><label for=menu-control><img src=/peace-of-posters/svg/menu.svg class=book-icon alt=Menu>
 </label><strong>Layouts</strong>
 <label for=toc-control><img src=/peace-of-posters/svg/toc.svg class=book-icon alt="Table of Contents"></label></div><aside class="hidden clearfix"><nav id=TableOfContents><ul><li><a href=#updating-a-layout>Updating a Layout</a></li><li><a href=#setting-a-new-layout>Setting a new Layout</a></li><li><a href=#example-layouts>Example Layouts</a><ul><li><a href=#default>Default</a></li><li><a href=#a0>A0</a></li><li><a href=#a1>A1</a></li><li><a href=#a2>A2</a></li><li><a href=#a3>A3</a></li><li><a href=#a4>A4</a></li></ul></li></ul></nav></aside></header><h1 id=layouts>Layouts
@@ -11,80 +11,80 @@ Argument Type Default Value Description spacing [length] [relative] 1.'><meta pr
 Similarly to <a href=/documentation/themes>themes</a>, their purpose is cosmetic.
 A layout, just like a theme, is a dictionary.</p><pre tabindex=0><code class=language-typst data-lang=typst>layout = (
     &#34;spacing&#34;: <a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a> <a href=https://typst.app/docs/reference/layout/relative/ class="code-type-relative code-type-block">relative</a>,
-    &#34;body_size&#34;: <a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a>,
-    &#34;heading_size&#34;: <a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a>,
-    &#34;title_size&#34;: <a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a>,
-    &#34;subtitle_size&#34;: <a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a>,
-    &#34;authors_size&#34;: <a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a>,
-    &#34;keywords_size&#34;: <a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a>,
+    &#34;body-size&#34;: <a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a>,
+    &#34;heading-size&#34;: <a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a>,
+    &#34;title-size&#34;: <a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a>,
+    &#34;subtitle-size&#34;: <a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a>,
+    &#34;authors-size&#34;: <a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a>,
+    &#34;keywords-size&#34;: <a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a>,
 )
 </code></pre><p>All default values assume an <code>a0</code> layout.
-You can easily change this by using the <code>set_layout</code> function below.</p><table><thead><tr><th>Argument</th><th>Type</th><th>Default Value</th><th>Description</th></tr></thead><tbody><tr><td><code>spacing</code></td><td><a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a> <a href=https://typst.app/docs/reference/layout/relative/ class="code-type-relative code-type-block">relative</a></td><td><code>1.2em</code></td><td>Spacing between boxes when stretching box.</td></tr><tr><td><code>body_size</code></td><td><a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a></td><td><code>33pt</code></td><td>Size of the body.</td></tr><tr><td><code>heading_size</code></td><td><a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a></td><td><code>50pt</code></td><td>Size of the heading.</td></tr><tr><td><code>title_size</code></td><td><a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a></td><td><code>75pt</code></td><td>Size of the title.</td></tr><tr><td><code>subtitle_size</code></td><td><a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a></td><td><code>60pt</code></td><td>Size of the subtitle.</td></tr><tr><td><code>authors_size</code></td><td><a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a></td><td><code>50pt</code></td><td>Size of the authors.</td></tr><tr><td><code>keywords_size</code></td><td><a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a></td><td><code>40pt</code></td><td>Size of the keywords.</td></tr></tbody></table><h2 id=updating-a-layout>Updating a Layout
-<a class=anchor href=#updating-a-layout>#</a></h2><pre tabindex=0><code class=language-typst data-lang=typst>update_layout(
+You can easily change this by using the <code>set-layout</code> function below.</p><table><thead><tr><th>Argument</th><th>Type</th><th>Default Value</th><th>Description</th></tr></thead><tbody><tr><td><code>spacing</code></td><td><a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a> <a href=https://typst.app/docs/reference/layout/relative/ class="code-type-relative code-type-block">relative</a></td><td><code>1.2em</code></td><td>Spacing between boxes when stretching box.</td></tr><tr><td><code>body-size</code></td><td><a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a></td><td><code>33pt</code></td><td>Size of the body.</td></tr><tr><td><code>heading-size</code></td><td><a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a></td><td><code>50pt</code></td><td>Size of the heading.</td></tr><tr><td><code>title-size</code></td><td><a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a></td><td><code>75pt</code></td><td>Size of the title.</td></tr><tr><td><code>subtitle-size</code></td><td><a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a></td><td><code>60pt</code></td><td>Size of the subtitle.</td></tr><tr><td><code>authors-size</code></td><td><a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a></td><td><code>50pt</code></td><td>Size of the authors.</td></tr><tr><td><code>keywords-size</code></td><td><a href=https://typst.app/docs/reference/layout/length/ class="code-type-length code-type-block">length</a></td><td><code>40pt</code></td><td>Size of the keywords.</td></tr></tbody></table><h2 id=updating-a-layout>Updating a Layout
+<a class=anchor href=#updating-a-layout>#</a></h2><pre tabindex=0><code class=language-typst data-lang=typst>update-layout(
     ..args
 )
 </code></pre><p>All arguments coincide with the values of the ones of <code>layout</code> shown above.</p><h2 id=setting-a-new-layout>Setting a new Layout
-<a class=anchor href=#setting-a-new-layout>#</a></h2><pre tabindex=0><code class=language-typst data-lang=typst>set_layout(
+<a class=anchor href=#setting-a-new-layout>#</a></h2><pre tabindex=0><code class=language-typst data-lang=typst>set-layout(
     layout: <a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a>,
 )
 </code></pre><h2 id=example-layouts>Example Layouts
 <a class=anchor href=#example-layouts>#</a></h2><h3 id=default>Default
-<a class=anchor href=#default>#</a></h3><pre tabindex=0><code class=language-typst data-lang=typst>#let _default_layout = (
+<a class=anchor href=#default>#</a></h3><pre tabindex=0><code class=language-typst data-lang=typst>#let -default-layout = (
     &#34;spacing&#34;: 1.2em,
 )
 </code></pre><h3 id=a0>A0
-<a class=anchor href=#a0>#</a></h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a0 = _default_layout + (
+<a class=anchor href=#a0>#</a></h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout-a0 = -default-layout + (
     &#34;paper&#34;:            &#34;a0&#34;,
     &#34;size&#34;:             (841mm, 1188mm),
-    &#34;body_size&#34;:        33pt,
-    &#34;heading_size&#34;:     50pt,
-    &#34;title_size&#34;:       75pt,
-    &#34;subtitle_size&#34;:    60pt,
-    &#34;authors_size&#34;:     50pt,
-    &#34;keywords_size&#34;:    40pt,
+    &#34;body-size&#34;:        33pt,
+    &#34;heading-size&#34;:     50pt,
+    &#34;title-size&#34;:       75pt,
+    &#34;subtitle-size&#34;:    60pt,
+    &#34;authors-size&#34;:     50pt,
+    &#34;keywords-size&#34;:    40pt,
 )
 </code></pre><h3 id=a1>A1
-<a class=anchor href=#a1>#</a></h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a1 = _default_layout + (
+<a class=anchor href=#a1>#</a></h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout-a1 = -default-layout + (
     &#34;paper&#34;:            &#34;a1&#34;,
     &#34;size&#34;:             (594mm, 841mm),
-    &#34;body_size&#34;:        27pt,
-    &#34;heading_size&#34;:     41pt,
-    &#34;title_size&#34;:       61pt,
-    &#34;subtitle_size&#34;:    49pt,
-    &#34;authors_size&#34;:     41pt,
-    &#34;keywords_size&#34;:    33pt,
+    &#34;body-size&#34;:        27pt,
+    &#34;heading-size&#34;:     41pt,
+    &#34;title-size&#34;:       61pt,
+    &#34;subtitle-size&#34;:    49pt,
+    &#34;authors-size&#34;:     41pt,
+    &#34;keywords-size&#34;:    33pt,
 )
 </code></pre><h3 id=a2>A2
-<a class=anchor href=#a2>#</a></h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a2 = _default_layout + (
+<a class=anchor href=#a2>#</a></h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout-a2 = -default-layout + (
     &#34;paper&#34;:            &#34;a2&#34;,
     &#34;size&#34;:             (420mm, 594mm),
-    &#34;body_size&#34;:        20pt,
-    &#34;heading_size&#34;:     31pt,
-    &#34;title_size&#34;:       47pt,
-    &#34;subtitle_size&#34;:    38pt,
-    &#34;authors_size&#34;:     31pt,
-    &#34;keywords_size&#34;:    25pt,
+    &#34;body-size&#34;:        20pt,
+    &#34;heading-size&#34;:     31pt,
+    &#34;title-size&#34;:       47pt,
+    &#34;subtitle-size&#34;:    38pt,
+    &#34;authors-size&#34;:     31pt,
+    &#34;keywords-size&#34;:    25pt,
 )
 </code></pre><h3 id=a3>A3
-<a class=anchor href=#a3>#</a></h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a3 = _default_layout + (
+<a class=anchor href=#a3>#</a></h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout-a3 = -default-layout + (
     &#34;paper&#34;:            &#34;a3&#34;,
     &#34;size&#34;:             (297mm, 420mm),
-    &#34;body_size&#34;:        14pt,
-    &#34;heading_size&#34;:     22pt,
-    &#34;title_size&#34;:       32pt,
-    &#34;subtitle_size&#34;:    26pt,
-    &#34;authors_size&#34;:     22pt,
-    &#34;keywords_size&#34;:    18pt,
+    &#34;body-size&#34;:        14pt,
+    &#34;heading-size&#34;:     22pt,
+    &#34;title-size&#34;:       32pt,
+    &#34;subtitle-size&#34;:    26pt,
+    &#34;authors-size&#34;:     22pt,
+    &#34;keywords-size&#34;:    18pt,
 )
 </code></pre><h3 id=a4>A4
-<a class=anchor href=#a4>#</a></h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout_a4 = _default_layout + (
+<a class=anchor href=#a4>#</a></h3><pre tabindex=0><code class=language-typst data-lang=typst>#let layout-a4 = -default-layout + (
     &#34;paper&#34;:            &#34;a4&#34;,
     &#34;size&#34;:             (210mm, 297mm),
-    &#34;body_size&#34;:        8pt,
-    &#34;heading_size&#34;:     12pt,
-    &#34;title_size&#34;:       18pt,
-    &#34;subtitle_size&#34;:    15pt,
-    &#34;authors_size&#34;:     12pt,
-    &#34;keywords_size&#34;:    10pt,
+    &#34;body-size&#34;:        8pt,
+    &#34;heading-size&#34;:     12pt,
+    &#34;title-size&#34;:       18pt,
+    &#34;subtitle-size&#34;:    15pt,
+    &#34;authors-size&#34;:     12pt,
+    &#34;keywords-size&#34;:    10pt,
 )
 </code></pre><footer class=book-footer><div class="flex flex-wrap justify-between"></div><script>(function(){function e(e){const t=window.getSelection(),n=document.createRange();n.selectNodeContents(e),t.removeAllRanges(),t.addRange(n)}document.querySelectorAll("pre code").forEach(t=>{t.addEventListener("click",function(){if(window.getSelection().toString())return;e(t.parentElement),navigator.clipboard&&navigator.clipboard.writeText(t.parentElement.textContent)})})})()</script></footer><div class=book-comments></div><label for=menu-control class="hidden book-menu-overlay"></label></div><aside class=book-toc><div class=book-toc-content><nav id=TableOfContents><ul><li><a href=#updating-a-layout>Updating a Layout</a></li><li><a href=#setting-a-new-layout>Setting a new Layout</a></li><li><a href=#example-layouts>Example Layouts</a><ul><li><a href=#default>Default</a></li><li><a href=#a0>A0</a></li><li><a href=#a1>A1</a></li><li><a href=#a2>A2</a></li><li><a href=#a3>A3</a></li><li><a href=#a4>A4</a></li></ul></li></ul></nav></div></aside></main></body></html>
