--- a/docs/layouts/shortcodes/codeFromFile.html
+++ b/docs/layouts/shortcodes/codeFromFile.html
@@ -20,12 +20,10 @@
 {{ .Scratch.Set "lang" $lang }}
 
 <!-- Highlight args -->
-{{ $highlight_args := dict }}
-{{ if (.Get "highlight_args") }}
-{{ $highlight_args = (.Get "highlight_args") }}
-{{ end }}
-{{ .Scratch.Set "highlight_args" $highlight_args }}
+{{ .Scratch.Set "options" (.Get "options") }}
+
+{{ $filename := (.Get "filename") | default "" }}
+{{ .Scratch.Set "filename" $filename }}
 
 <!-- Pass all arguments to the partial via scratch -->
 {{ partial "codeFromFile.html" .  }}
-
